// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inverted button primary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c1 {
  -webkit-transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  color: #096BDB;
  fill: #096BDB;
  background: #FFFFFF;
  border-color: #FFFFFF;
}

.c1:hover {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #096BDB;
  border-color: #096BDB;
}

.c1:disabled {
  color: #9CA7B4;
  fill: #9CA7B4;
  background: #637689;
  border-color: #637689;
}

<button
  class="c0 c1"
>
  Click
</button>
`;

exports[`inverted button secondary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c1 {
  -webkit-transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  color: #FFFFFF;
  fill: #FFFFFF;
  background: transparent;
  border-color: #FFFFFF;
}

.c1:hover {
  color: #001E3E;
  fill: #001E3E;
  background: #FFFFFF;
  border-color: #FFFFFF;
}

.c1:disabled {
  color: #637689;
  fill: #637689;
  background: transparent;
  border-color: #637689;
}

<button
  class="c0 c1"
>
  Click
</button>
`;

exports[`standard button danger renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c1 {
  -webkit-transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #FF5E05;
  border-color: #FF5E05;
}

.c1:hover {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #BF4704;
  border-color: #BF4704;
}

.c1:disabled {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #C6CDD4;
  border-color: #C6CDD4;
}

<button
  class="c0 c1"
>
  Click
</button>
`;

exports[`standard button primary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c1 {
  -webkit-transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #001E3E;
  border-color: #001E3E;
}

.c1:hover {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #000F1F;
  border-color: #000F1F;
}

.c1:disabled {
  color: #FFFFFF;
  fill: #FFFFFF;
  background: #C6CDD4;
  border-color: #C6CDD4;
}

<button
  class="c0 c1"
>
  Click
</button>
`;

exports[`standard button secondary renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c1 {
  -webkit-transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  transition: background ease 200ms,border-color ease 200ms,color ease 200ms,fill ease 200ms;
  color: #001E3E;
  fill: #001E3E;
  background: #FFFFFF;
  border-color: #C6CDD4;
}

.c1:hover {
  color: #001E3E;
  fill: #001E3E;
  background: #F1F2F4;
  border-color: #C6CDD4;
}

.c1:disabled {
  color: #C6CDD4;
  fill: #C6CDD4;
  background: #FFFFFF;
  border-color: #C6CDD4;
}

<button
  class="c0 c1"
>
  Click
</button>
`;
